--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,18 @@
   <%= @user.address %>
 </div>
 
+<div>
+  <strong>State:</strong>
+  <%= @user.state %>
+</div>
 
+<div>
+  <strong>Zipcode:</strong>
+  <%= @user.zipcode %>
+</div>
+<div>
+  <strong>City:</strong>
+  <%= @user.city %>
+</div>
 
-<%= link_to 'Back', users_path,class:"btn btn-success"%>
 </div>
