File Upload Module

--- a/app/views/users/_formFile.html.erb
+++ b/app/views/users/_formFile.html.erb
@@ -1,5 +1,5 @@
 <div class="form-outline position-absolute top-50 start-50 translate-middle my-4 p-5 rounded border border-success bg-white col-6">
-	<%= form_with model: @user, local: true do |form| %>
+	<%= form_with model: user, url: users_file_upload_path, method: :put, local: true do |form| %>
 
 <h2>Upload The Files</h2>
 		<div>
@@ -14,5 +14,6 @@
   		<div>
    			<%= form.file_field :docFile%>
   		</div>
+  		 <%= form.submit "Submit",:class=> "btn btn-primary m-1" %>
   		<% end %>
 </div>
