--- a/app/views/users/_formFile.html.erb
+++ b/app/views/users/_formFile.html.erb
@@ -13,7 +13,7 @@
   		</div>
   		<div>
    			<%= form.file_field :docFile%>
-  		</div>
-  		 <%= form.submit "Submit",:class=> "btn btn-primary m-1" %>
+  		</div >
+  		 <%= form.submit "Submit",:class=> "btn btn-primary btn-sm m-1" %>
   		<% end %>
 </div>
