Define Admin and User Role

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,11 @@
   <%= @user.dob %>
 </div>
 
+<div>
+  <strong>Email:</strong>
+  <%= @user.email %>
+</div>
+
 
 <div>
   <strong>CNIC:</strong>
