--- a/app/views/users/verificationModuel.html.erb
+++ b/app/views/users/verificationModuel.html.erb
@@ -2,5 +2,12 @@
 	<div class="container ">
       <p>Hi <strong><%=current_user.first_name%></strong> ! Your verification Link Sent to <strong><%= current_user.email%></strong>, Go to your email and check the verifaction email to activate your account.</p>
 	</div>
+	<div class="container">
+		<strong><%= current_user.phone_number%></strong><br>
+		<div class="item bg-danger">
+			<label><strong>Enter Code:</strong> </label><br>
+			<input type="text" id="pin" name="pin" maxlength="4" size="4"><br>
+		</div>
+	</div>
 </div>
 
