--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-     <p class = " position-absolute notice" ><%= notice %> </p>
-    <p class = " position-absolute alert " ><%= alert %></p>
+     <p class = " notice" ><%= notice %> </p>
+    <p class = " alert " ><%= alert %></p>
     <%= yield %>
   </body>
 </html>
