--- a/app/views/users/verificationModuel.html.erb
+++ b/app/views/users/verificationModuel.html.erb
@@ -1,13 +1,27 @@
-<div>
-	<div class="container ">
-      <p>Hi <strong><%=current_user.first_name%></strong> ! Your verification Link Sent to <strong><%= current_user.email%></strong>, Go to your email and check the verifaction email to activate your account.</p>
-	</div>
-	<div class="container">
-		<strong><%= current_user.phone_number%></strong><br>
-		<div class="item bg-danger">
-			<label><strong>Enter Code:</strong> </label><br>
-			<input type="text" id="pin" name="pin" maxlength="4" size="4"><br>
+<%=render 'header'%>
+<div class="center rounded border border-success bg-white my-4">
+<div class="container my-5">
+	<div class="colums">
+		<div class="item">
+			<label for="eamil">Emial</label>
+      <input type="eamil" name="eamil" value="<%=current_user.email%>" disabled>
 		</div>
-	</div>
+		<div class="item">
+			<label for="eamil">Phone Number</label>
+      <input type="eamil" name="eamil" value="<%=current_user.phone_number%>" disabled>
+		</div>
 </div>
-
+<div class="colums">
+		<div class="item">
+			<label for="eamil">Enter Code</label>
+      		<input type="eamil" name="eamil">
+      		<button class="btn btn-sm btn-primary rounded border-success m-2">Verify</button>
+		</div>
+		<div class="item">
+			<label for="eamil">Enter Code</label>
+      		<input type="eamil" name="eamil">
+      		<button class="btn btn-sm btn-primary rounded border-success m-2">Verify</button>
+		</div>
+</div>
+</div>
+</div>
