--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,7 +44,7 @@
       }
     
       input {
-      width: calc(100% - 10px);
+       width: calc(100% - 10px); 
       padding: 5px;
       }
       input[type="date"] {
@@ -102,9 +102,7 @@
       transform: rotate(-45deg);
       opacity: 0;
       }
-      input[type=radio]:checked + label:after {
-      opacity: 1;
-      }
+     
       .flax {
       display:flex;
       justify-content:space-around;
@@ -141,6 +139,45 @@
       display:block;
       padding-bottom:5px;
       }
+      .center {
+        margin: auto;
+        width: 50%;
+        border: 3px solid #73AD21;
+        padding: 10px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 * {
