--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
      <p class = " notice" ><%= notice %> </p>
     <p class = " alert " ><%= alert %></p>
+    <div class="container">
+    
     <%= yield %>
+    </div>
   </body>
 </html>
