--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,9 @@
-<div class="testbox">
+
+<div class="testbox my-4">
       
       	 <%= form_with model: user, local: true do |form| %>
         <div class="banner">
-          <h1>New Member Registration</h1>
+          <h1>Member Registration</h1>
         </div>
         <div class="colums">
           <div class="item">
@@ -46,6 +47,11 @@
             <label for="city">City<span>*</span></label>
             <%= form.text_field :city%>
           </div>
+          <div class="item">
+            <label for="files">Upload Files<span>*</span></label>
+              <%= form.file_field :files_Upload%>
+          </div>
+          
         </div>
         </div>
 
