--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<%=render 'header'%>
 <div class="container">
  
 <div>
@@ -51,5 +52,7 @@
   <strong>City:</strong>
   <%= @user.city %>
 </div>
+
+<%= link_to 'Back', root_path,class:"btn btn-success"%>
 
 </div>
