Implemented the profile for user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,48 +8,48 @@
         <div class="colums">
           <div class="item">
             <label for="fname"> First Name<span>*</span></label>
-            <%= form.text_field :first_name%>
+            <%= form.text_field :first_name, class:"inputField"%>
           </div>
           <div class="item">
             <label for="lname"> Last Name<span>*</span></label>
-           <%= form.text_field :last_name%>
+           <%= form.text_field :last_name , class:"inputField"%>
           </div>
           <div class="item">
             <label for="eamil">Emial<span>*</span></label>
-            <%= form.email_field :email%>
+            <%= form.email_field :email , class:"inputField"%>
           </div>
            <div class="item">
             <label for="phone">Phone<span>*</span></label>
-            <%= form.text_field :phone_number%>
+            <%= form.text_field :phone_number , class:"inputField"%>
           </div>
           <div class="item">
             <label for="zip">Cnic<span>*</span></label>
-            <%= form.text_field :cnic%>
+            <%= form.text_field :cnic , class:"inputField"%>
           </div>
            <div class="item">
             <label for="dob">Date of Birth<span>*</span></label>
-            <%= form.date_field :dob%>
+            <%= form.date_field :dob , class:"inputField"%>
           </div>
           <div class="item">
             <label for="address1">Address<span>*</span></label>
-            <%= form.text_field :address%>
+            <%= form.text_field :address , class:"inputField"%>
           </div>
           <div class="item">
             <label for="state">State<span>*</span></label>
-             <%= form.text_field :state%>
+             <%= form.text_field :state , class:"inputField"%>
           </div>
           
           <div class="item">
             <label for="zip">Zip/Postal Code<span>*</span></label>
-             <%= form.text_field :zipcode%>
+             <%= form.text_field :zipcode , class:"inputField"%>
           </div>
           <div class="item">
             <label for="city">City<span>*</span></label>
-            <%= form.text_field :city%>
+            <%= form.text_field :city , class:"inputField"%>
           </div>
           <div class="item">
             <label for="files">Upload Files<span>*</span></label>
-              <%= form.file_field :files_Upload%>
+              <%= form.file_field :files_Upload , class:"inputField"%>
           </div>
           
         </div>
