--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="headerBg">
+<header class="bg-light">
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <button
@@ -15,17 +15,13 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="<%=root_path%>">Home</a>
+            <a class="nav-link btn btn-outline-primary" aria-current="page" href="<%=root_path%>">Home</a>
           </li>
+        </ul>
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <%= link_to 'LogOut',destroy_user_session_path,method: :delete,class:"nav-link"%>
-          </li>
+            <%= link_to 'LogOut',destroy_user_session_path,method: :delete,class:"nav-link btn btn-outline-primary "%>
+        </li>
         </ul>
 
       </div>
