--- a/app/views/users/_searchForm.html.erb
+++ b/app/views/users/_searchForm.html.erb
@@ -1,11 +1,9 @@
-<div class="">
-  <%=search_form_for @q,url: :root do |form|%>
+<%=search_form_for @q,url: :root do |form|%>
     <div class="input-group">
-      <div class="form-outline">
-        <label for="search"> Search</label>
-        <%=form.search_field :first_name_or_last_name_or_email_cont%>
+      <div class="topMargin">
+        <%=form.search_field :first_name_or_last_name_or_email_cont,class:"form-control",placeholder:"Search...." %>
       </div> 
-        <i class=""><%=form.submit "Search", class:"btn btn-primary my-4"%></i>
+      <i class=""><%=form.submit "Search", class:"btn btn-outline-primary my-1"%></i>
+     
     </div>
       <%end%> 
-</div>
