--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,40 @@
-<%=render 'header'%>
- <%if current_user.admin?%>
-      <%= render 'searchForm'%>
-   <%end%>
+<header class="bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active mx-1">
+            <a class="nav-link btn btn-outline-primary" aria-current="page" href="<%=root_path%>">Home</a>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'LogOut',destroy_user_session_path,method: :delete,class:"nav-link btn btn-outline-primary "%>
+        </li>
+        </ul>
+        <ul class="navbar-nav">
+        	<li class="nav-item">
+        		 <%if current_user.admin?%>
+      				<%= render 'searchForm'%>
+  					 <%end%>
+        	</li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
  <div class="my-4">
  <div class=" table-responsive bg-white rounded border border-success p-2">
-
    <table class="table table-striped" >
 		<tr>
 			<th >First Name</th>
@@ -25,10 +55,10 @@
 					<%if current_user.admin?%>
 					<%= link_to 'Show', user_path(user),class:"btn btn-success btn-sm w-25"%>
 					<button class="btn btn-danger btn-sm w-25">Reject</button>
-					<button class="btn btn-success btn-sm w-25">Approve</button>
+					<button class="btn btn-success btn-sm w-25">Approve</button>	
 					<%else%>
-					<%= link_to 'Show', user_path(user),class:"btn btn-success"%>
-					<%= link_to 'Continue Application', edit_user_path(user),class:"btn btn-success" %>
+					<%= link_to 'Show', user_path(user),class:"btn btn-success btn-sm w-25"%>
+					<%= link_to 'Application', edit_user_path(user),class:"btn btn-success btn-sm w-25" %>
 
 					<%end%>	
 					</td>
@@ -37,7 +67,24 @@
 
 			<% end %>
 		</table>
+		<%if current_user.admin?%>
 		<%= paginate @users %>
+		<%end%>	
 	</div>
 	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
