--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,58 +1,75 @@
 <%=render 'header'%>
-<div class="container">
- 
-<div>
-  <strong>Firstname:</strong>
-  <%= @user.first_name %>
-</div>
-
-<div>
-  <strong>Lastname:</strong>
-  <%= @user.last_name %>
-</div>
-
-<div>
-  <strong>Phonenumber:</strong>
-  <%= @user.phone_number %>
-</div>
-
-
-<div>
-  <strong>Date of Birth:</strong>
-  <%= @user.dob %>
-</div>
-
-<div>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</div>
-
-
-<div>
-  <strong>CNIC:</strong>
-  <%= @user.cnic %>
-</div>
-
-
-<div>
-  <strong>Adress:</strong>
-  <%= @user.address %>
-</div>
-
-<div>
-  <strong>State:</strong>
-  <%= @user.state %>
-</div>
-
-<div>
-  <strong>Zipcode:</strong>
-  <%= @user.zipcode %>
-</div>
-<div>
-  <strong>City:</strong>
-  <%= @user.city %>
-</div>
-
-<%= link_to 'Back', root_path,class:"btn btn-success"%>
-
-</div>
+    <div class="row my-3">
+      <div class="col-lg-4">
+        <div class="card mb-4">
+          <div class="card-body text-center">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px;">
+            <h5 class="my-3"><%= current_user.first_name %></h5>
+            <p class="text-muted mb-1">Full Stack Developer</p>
+            <div class=" mt-3">
+              <button type="button" class="btn btn-outline-primary">Follow</button>
+              <button type="button" class="btn btn-outline-primary ms-1">Message</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="card mb-4">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Full Name</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%=[current_user.first_name,current_user.last_name].join(' ')%></p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Email</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%= current_user.email%></p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Phone</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%= current_user.phone_number%></p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Date of Birth</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%= current_user.dob%></p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Address</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%=current_user.address%></p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Cnic</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0"><%=current_user.cnic%></p>
+              </div>
+            </div>
+          </div>
+        </div>
+</section>
