Added Email and Phone OTP Verifaction Module

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -18,13 +18,13 @@
       z-index: 2;
       line-height: 83px;
       }
-      form {
+     /* form {
       width: 100%;
       padding: 20px;
       border-radius: 6px;
       background: #fff;
       box-shadow: 0 0 8px  #669999; 
-      }
+      }*/
       .banner {
       position: relative;
       height: 300px;
