--- a/app/views/verification_email_mailer/verify_email.html.erb
+++ b/app/views/verification_email_mailer/verify_email.html.erb
@@ -6,7 +6,7 @@
       You have successfully signed In to <strong> "Devsloop.com" </strong>your user email is: <%= @user.email%>.</p>
     </p>
     <p>
-      To Verify the Account, just Click on this link: <strong><%= @url %>.</strong>
+      To Verify the Account, Entert the OTP Code <strong> <%=@code%></strong>
     </p>
     <p>Thanks for joining and have a great day!</p>
 </p>
