--- a/app/views/users/verificationModuel.html.erb
+++ b/app/views/users/verificationModuel.html.erb
@@ -1,27 +1,49 @@
-<%=render 'header'%>
+<% if !current_user.email_verify? %>
 <div class="center rounded border border-success bg-white my-4">
 <div class="container my-5">
 	<div class="colums">
 		<div class="item">
 			<label for="eamil">Emial</label>
       <input type="eamil" name="eamil" value="<%=current_user.email%>" disabled>
-		</div>
-		<div class="item">
-			<label for="eamil">Phone Number</label>
-      <input type="eamil" name="eamil" value="<%=current_user.phone_number%>" disabled>
-		</div>
+		</div>		
 </div>
 <div class="colums">
+	<%= form_with model:current_user, url:users_email_verified_path, method: :get, local: true do |form| %>
 		<div class="item">
 			<label for="eamil">Enter Code</label>
-      		<input type="eamil" name="eamil">
-      		<button class="btn btn-sm btn-primary rounded border-success m-2">Verify</button>
+      		<%=link_to 'Send Code',users_sent_email_OTP_Code_path%>
+      		<%=form.text_field :verifyCode%>
+      		<%= form.submit "Submit",:class=> "btn btn-primary btn-sm m-1" %>
+      		
 		</div>
+		<%end%>
+		
+
+</div>
+</div>
+</div>
+<%else%>
+<div class="center rounded border border-success bg-white my-4">
+<div class="container my-5">
+	<div class="colums">
+		<div class="item">
+			<label for="eamil">Phone Number</label>
+      <input type="phone" name="phone" value="<%=current_user.phone_number%>" disabled>
+		</div>		
+</div>
+<div class="colums">
+	<%= form_with model:current_user, url:users_phone_verified_path, method: :get, local: true do |form| %>
 		<div class="item">
 			<label for="eamil">Enter Code</label>
-      		<input type="eamil" name="eamil">
-      		<button class="btn btn-sm btn-primary rounded border-success m-2">Verify</button>
+      		<%=link_to 'Send Code', users_sent_Phone_OTP_Code_path %>
+      		<%=form.text_field :verifyPhoneCode%>
+      		<%= form.submit "Submit",:class=> "btn btn-primary btn-sm m-1" %>
+      		
 		</div>
+		<%end%>
+		
+
 </div>
 </div>
 </div>
+<%end%>
