--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 <%=render 'header'%>
+
     <div class="row my-3">
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
-            <h5 class="my-3"><%= current_user.first_name %></h5>
+            <h5 class="my-3"><%= @user.first_name %></h5>
+
             <p class="text-muted mb-1">Full Stack Developer</p>
             <div class=" mt-3">
               <button type="button" class="btn btn-outline-primary">Follow</button>
@@ -22,7 +24,7 @@
                 <p class="mb-0">Full Name</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%=[current_user.first_name,current_user.last_name].join(' ')%></p>
+                <p class="text-muted mb-0"><%=[@user.first_name,@user.last_name].join(' ')%></p>
               </div>
             </div>
             <hr>
@@ -31,7 +33,7 @@
                 <p class="mb-0">Email</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%= current_user.email%></p>
+                <p class="text-muted mb-0"><%= @user.email%></p>
               </div>
             </div>
             <hr>
@@ -40,7 +42,7 @@
                 <p class="mb-0">Phone</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%= current_user.phone_number%></p>
+                <p class="text-muted mb-0"><%= @user.phone_number%></p>
               </div>
             </div>
             <hr>
@@ -49,7 +51,7 @@
                 <p class="mb-0">Date of Birth</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%= current_user.dob%></p>
+                <p class="text-muted mb-0"><%= @user.dob%></p>
               </div>
             </div>
             <hr>
@@ -58,7 +60,7 @@
                 <p class="mb-0">Address</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%=current_user.address%></p>
+                <p class="text-muted mb-0"><%=@user.address%></p>
               </div>
             </div>
             <hr>
@@ -67,7 +69,7 @@
                 <p class="mb-0">Cnic</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0"><%=current_user.cnic%></p>
+                <p class="text-muted mb-0"><%=@user.cnic%></p>
               </div>
             </div>
           </div>
