--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,7 +1,4 @@
-
-    min-height: 100%;
-      }
-      body, div, form, input, select, textarea, label, p { 
+ body, div, form, input, select, textarea, label, p { 
       padding: 0;
       margin: 0;
       outline: none;
@@ -18,17 +15,24 @@
       z-index: 2;
       line-height: 83px;
       }
-     /* form {
+      .testbox {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: inherit;
+      padding: 20px;
+      }
+      .formBack{
       width: 100%;
       padding: 20px;
       border-radius: 6px;
       background: #fff;
       box-shadow: 0 0 8px  #669999; 
-      }*/
+      }
       .banner {
       position: relative;
       height: 300px;
-      background-image: url("/uploads/media/default/0001/02/c1504011491c4e04e5158b63a27a4ea654b03ed1.jpeg");  
+      background-image: url("/uploads/media/default/0001/02/8070c999efd1a155ad843379a5508d16f544aeaf.jpeg");  
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -37,17 +41,17 @@
       }
       .banner::after {
       content: "";
-      background-color: rgba(0, 0, 0, 0.2); 
+      background-color: rgba(0, 0, 0, 0.3); 
       position: absolute;
       width: 100%;
       height: 100%;
       }
-      .inputField{
-        width: calc(100% - 10px); 
-        padding: 5px;
+      input {
+      width: calc(100% - 10px);
+      padding: 5px;
       }
-      input[type="date"] {
-      padding: 4px 5px;
+      .item:hover p, .item:hover i, .question:hover p, .question label:hover, input:hover::placeholder {
+      color:  #669999;
       }
       .item {
       position: relative;
@@ -69,38 +73,11 @@
       .colums div {
       width:48%;
       }
-      .question span {
-      margin-left: 30px;
+      .item i {
+      right: 1%;
+      top: 30px;
+      z-index: 1;
       }
-      .question-answer label {
-      display: block;
-      }
-      label.radio:before {
-      content: "";
-      position: absolute;
-      left: 0;
-      width: 17px;
-      height: 17px;
-      border-radius: 50%;
-      border: 2px solid #ccc;
-      }
-      input[type=radio]:checked + label:before, label.radio:hover:before {
-      border: 2px solid  #669999;
-      }
-      label.radio:after {
-      content: "";
-      position: absolute;
-      top: 6px;
-      left: 5px;
-      width: 8px;
-      height: 4px;
-      border: 3px solid  #669999;
-      border-top: none;
-      border-right: none;
-      transform: rotate(-45deg);
-      opacity: 0;
-      }
-     
       .flax {
       display:flex;
       justify-content:space-around;
@@ -122,12 +99,6 @@
       button:hover {
       background:  #a3c2c2;
       }
-     @media (min-width: 568px) {
-      .name-item, .city-item {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      }
       .name-item input, .name-item div {
       width: calc(50% - 20px);
       }
@@ -137,16 +108,4 @@
       display:block;
       padding-bottom:5px;
       }
-      .center {
-        margin: auto;
-        width: 50%;
-        border: 3px solid #73AD21;
-        padding: 10px;
-    }
-    .topMargin{
-        margin-top: 5px;
-    }
-
-
-
-
+      
